--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,25 +1,79 @@
-.main {
-    width: 100%;
-    height: 100vh;
+* {
+    margin: 0;
+    box-sizing: border-box;
+    color: white;
 }
 
-video {
+@font-face {
+    font-family: "Merianda";
+    src: url("../../assets/fonts/Merianda.ttf") format('woff2');
+}
+
+.landingPage {
     width: 100%;
-    height: 90%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    transition: 0.5s;
+    font-family: serif;
+}
+
+.video-bg {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    z-index: -1;
     object-fit: cover;
 }
 
-.content {
-    position: absolute;
-    width: 80%;
+.bg-overlay {
     height: 100%;
-    left: 10%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.navBar {
+    width: 100%;
+    height: 6em;
+    border-bottom: 2px solid white;
+    position: absolute;
     top: 0;
+    left: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    z-index: 1;
+}
+
+.menu {
+    height: 3em;
+    width: 4em;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
-    border: 1px solid white;
-    color: white;
-    font-size: 25px;
+    margin-left: 6em;
+    cursor: pointer;
+}
+
+.menu div {
+    width: 90%;
+    height: 0.25em;
+    background-color: white;
+    border-radius: 1em;
+}
+
+.menu div:nth-of-type(2) {
+    width: 40%;
+}
+
+.home-text {
+    width: 70%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
 }
