--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+@font-face {
+  font-family: "Merianda";
+  src: url("../src/assets/fonts/Merianda.ttf") format("ttf");
+  font-size: normal;
+  font-weight: normal;
 }
 
