--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica";
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('./assets/fonts/helvetica-neu.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'La Belle Aurore';
+  src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Coolvetica';
+  src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Merianda";
+  src: url("./assets/fonts/Merianda.woff") format('woff');
+  font-size: normal;
+  font-weight: normal;
 }
