--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    color: white;
+    color: whitesmoke;
 }
 
 .landingPage {
@@ -29,12 +29,15 @@
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    z-index: 0;
 }
 
 .navBar {
     width: 100%;
     height: 6em;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid whitesmoke;
     position: absolute;
     top: 0;
     left: 0;
@@ -58,7 +61,7 @@
 .menu div {
     width: 90%;
     height: 0.25em;
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 1em;
 }
 
@@ -68,17 +71,18 @@
 
 .home-text {
     width: 70%;
-    height: 60%;
+    height: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     z-index: 2;
-    font-family: "Merianda";
+    margin-top: 15em;
 }
 
 h1 {
     font-size: 4em;
+    animation: fade 4s;
 }
 
 p {
@@ -87,5 +91,27 @@ p {
 }
 
 .home-btn {
-    width: 4em;
+    width: 6em;
+    height: 2em;
+    border: 2px solid whitesmoke;
+    border-radius: 0.25em;
+    background-color: rgba(255 , 255, 255, 0.5);
+    z-index: 1;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+/* Animation */
+@keyframes fade {
+    0% {
+        opacity: 0;
+        margin-left: 3em;
+    }
+    100% {
+        opacity: 1;
+    }
 }
