--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -83,3 +83,21 @@
     position: absolute;
     top: 50px;
 }
+
+.options {
+    position: absolute;
+    top: 50px;
+    background-color: white;
+    color: gray;
+    border-radius: 5px;
+    -webkit-box-shadow: 11px 4px 12px 0px rgba(0,0,0,0.4);
+    -moz-box-shadow: 11px 4px 12px 0px rgba(0,0,0,0.4);
+    box-shadow: 11px 4px 12px 0px rgba(0,0,0,0.4);
+}   
+
+.optionItem {
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    
+}
