--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -99,5 +99,22 @@
     width: 200px;
     display: flex;
     justify-content: space-between;
-    
+    margin: 10px;
+}
+
+.optionCounter {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 12px;
+    color: black;
+}
+
+.optionCounterButton {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #d7798b;
+    color: #d7798b;
+    cursor: pointer;
+    background-color: white ;
 }
