--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #301934;
+    background-color: var(--main-bg-color);
     display: flex;
     justify-content: center;
     position: relative;
