--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   font-family: 'Coolvetica';
+  --main-bg-color: #301934;
+  --main-text-color: whitesmoke;
 }
 
 @font-face {
