--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -1,4 +1,19 @@
 .mail {
     width: 100%;
     margin-top: 50px;
+    background-color: var(--main-bg-color);
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 50px;
+}
+
+.mailInputContainer > input {
+    width: 300px;
+    height: 30px;
+    padding: 10px;
+    border: none;
+    margin-right: 10px;
 }
