--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   font-family: 'Coolvetica';
   --main-bg-color: #301934;
   --main-text-color: whitesmoke;
+  --button-bg-color: #7e397c;
 }
 
 @font-face {
