--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -10,10 +10,21 @@
     padding: 50px;
 }
 
-.mailInputContainer > input {
+.mailInputContainer>input {
     width: 300px;
     height: 30px;
     padding: 10px;
     border: none;
     margin-right: 10px;
+}
+
+.mailInputContainer>button {
+    height: 50px;
+    background-color: var(--button-bg-color);
+    color: whitesmoke;
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100px;
 }
