footer styling linked

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,4 +7,10 @@
 .fLists {
     width: 100%;
     display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.fList {
+    list-style: none;
 }
