--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -13,4 +13,11 @@
 
 .fList {
     list-style: none;
+    padding: 0;
+}
+
+.fListItem {
+    margin-bottom: 10px;
+    color: var(--main-bg-color);
+    cursor: pointer;
 }
