--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --main-bg-color: #301934;
   --main-text-color: whitesmoke;
   --button-bg-color: #7e397c;
+  --secondary-bg-color: #d7798b;
 }
 
 @font-face {
