--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -6,4 +6,19 @@
 
 .listWrapper {
     width: 100%;
+    max-width: 1024px;
+    display: flex;
+    gap: 20px;
 }
+
+.listSearch { 
+    flex: 1;
+    background-color: var(--secondary-bg-color);
+}
+
+.lsTitle {
+    font-size: 20px;
+    color: #555;
+    margin-bottom: 10px;
+}
+.listResult { flex: 3;}
