--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -22,7 +22,12 @@
 
 .lsTitle {
     font-size: 20px;
-    color: #555;
     margin-bottom: 10px;
+}
+
+.lsItem {
+    display: flex;
+    flex-direction: column;
+    
 }
 .listResult { flex: 3;}
