--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -28,6 +28,28 @@
 .lsItem {
     display: flex;
     flex-direction: column;
-    
+    gap: 5px;
+    margin-bottom: 10px;
 }
+
+.lsItem>label {
+    font-size: 12px;
+}
+
+.lsItem>input {
+    height: 30px;
+    border: none;
+    padding: 5px;
+}
+
+.lsItem>span {
+    height: 30px;
+    padding: 5px;
+    background-color: whitesmoke;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+
 .listResult { flex: 3;}
